feat(AC): initial user handlers
